# paper-pi

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/scripts/: cleanup-ghcr-prerelease.sh  cleanup-ghcr-untagged.sh
.github/workflows/: ci.yml  docker-build.yml  release.yml  test.yml
githooks/: pre-commit  pre-push
mocks/: __init__.py  data.py  generate.py
scripts/: generate_real_screenshots.py  generate_screenshots.py
src/: __init__.py  config.py  dashboard_provider.py  data_manager.py  holiday.py  layout.py  main.py  poetry_layout.py  poetry_provider.py  providers.py  quote_layout.py  quote_provider.py  renderer.py  wallpaper.py
src/drivers/: base.py  factory.py  mock.py  waveshare.py
src/layouts/: dashboard.py  poetry.py  quote.py
src/layouts/components/: footer.py  hackernews.py  header.py  todo_list.py  year_end.py
src/layouts/utils/: layout_helper.py
src/lib/: epd7in5_V2.py  epdconfig.py
src/lib/waveshare_epd/: epdconfig.py
src/providers/: dashboard.py  poetry.py  quote.py
src/renderer/: dashboard.py  text.py
src/utils/: fonts.py
tests/: test_holiday.py  test_layout_poetry.py  test_poetry.py  test_providers.py  test_quote.py
