[project]
name = "eink-dashboard"
version = "0.1.0"
description = "A personalized, asynchronous dashboard for Waveshare E-Ink displays"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Palemoky", email = "palemoky@gmail.com" }
]
keywords = ["e-ink", "dashboard", "raspberry-pi", "waveshare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "httpx>=0.27.0",
    "pendulum>=3.0.0",
    "Pillow>=10.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "borax>=4.0.0",
    "notion-client>=2.0.0",
    "gspread>=5.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
# Hardware dependencies (only needed on Raspberry Pi)
hardware = [
    "RPi.GPIO",
    "gpiozero",
    "spidev",
]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-xdist",
    "pytest-cov",
    "types-requests",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = ["src/lib"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
exclude = ["src/lib"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "-n auto",  # 自动并发测试
]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
