[project]
name = "paper-pi"
version = "0.2.0"
description = "A personalized, asynchronous dashboard for Waveshare E-Ink displays"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Palemoky", email = "palemoky@gmail.com" }
]
keywords = ["e-ink", "dashboard", "raspberry-pi", "waveshare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "httpx>=0.28.0",
    "pendulum>=3.0.0",
    "Pillow>=12.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "tenacity>=9.1.0",
    "borax>=4.1.0",
    "notion-client>=2.7.0",
    "gspread>=6.2.0",
    "watchdog>=6.0.0",
    "structlog>=25.5.0",
]

[project.scripts]
paper-pi = "src.main:main"

[project.optional-dependencies]
hardware = [
    "rpi-lgpio",
    "gpiozero",
    "spidev",
]

dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-xdist",
    "pytest-cov",
    "types-requests",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Ruff configuration - Fast Python linter and formatter
[tool.ruff]
line-length = 100
target-version = "py314"
exclude = ["src/lib"]  # Exclude third-party library code

[tool.ruff.lint]
# Enable specific linting rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs and design problems)
    "C4",  # flake8-comprehensions (better list/dict/set comprehensions)
]
# Disable specific rules that conflict with project style
ignore = [
    "E501",  # Line too long (handled by formatter)
]

# MyPy configuration - Static type checker for Python
[tool.mypy]
python_version = "3.14"
warn_return_any = false  # Disabled to reduce noise from third-party libraries
warn_unused_configs = true
exclude = ["src/lib"]  # Exclude third-party library code
no_implicit_optional = false  # Allow implicit Optional for cleaner type hints

# Disable error codes that cause false positives with third-party libraries
# These libraries have incomplete or inaccurate type stubs
disable_error_code = [
    "no-any-return",      # Third-party libraries often return Any types
    "attr-defined",       # PIL and notion_client have incomplete type stubs
    "union-attr",         # pendulum.parse() returns Union types causing issues
    "arg-type",           # Generic type inference issues with complex types
    "assignment",         # PIL Image type conversions are not well-typed
    "index",              # Optional dict indexing patterns
    "valid-type",         # ImageDraw.Draw has type definition issues
]

# Ignore missing type stubs for third-party libraries without py.typed marker
[[tool.mypy.overrides]]
module = [
    "borax.*",           # Chinese calendar and date utilities
    "notion_client.*",   # Notion API client
    "PIL.*",             # Python Imaging Library (Pillow)
    "watchdog.*",        # File system event monitoring
]
ignore_missing_imports = true

# Pytest configuration - Testing framework
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",                                      # Show summary of all test outcomes
    "-q",                                       # Quiet mode (less verbose output)
    "--strict-markers",                         # Enforce marker registration
    "--strict-config",                          # Enforce strict configuration
    "--cov=src",                                # Measure code coverage for src/
    "--cov-report=term-missing:skip-covered",   # Show missing lines in terminal
    "--cov-report=html",                        # Generate HTML coverage report
    "--cov-report=xml",                         # Generate XML coverage report for CI
    "-n auto",                                  # Auto-detect CPU count for parallel testing
]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Commitizen configuration - Semantic versioning and changelog automation
[tool.commitizen]
tag_format = "v$version"          # Git tag format (e.g., v0.1.0)
version_scheme = "pep440"         # Use PEP 440 compliant version numbers
version_provider = "pep621"       # Read version from [project] section (single source of truth)
update_changelog_on_bump = true   # Automatically update CHANGELOG.md on version bump
major_version_zero = true         # Keep 0.x.x during development (breaking changes bump minor, not major)

# Conventional commit scopes for better categorization
scopes = [
    "hardware",   # GPIO, SPI, Raspberry Pi hardware-related code
    "render",     # Pillow drawing and layout rendering
    "data",       # Data fetching (Notion, Google Sheets, HTTP requests)
    "ui",         # User interface and display logic
    "docker",     # Dockerfile and docker-compose changes
    "ci",         # GitHub Actions and CI/CD workflows
    "deps",       # Dependency updates
    "docs",       # Documentation changes
]

bump_message = "chore(release): bump version $current_version -> $new_version"
annotated_tag = true              # Create annotated Git tags with metadata
changelog_file = "CHANGELOG.md"   # Changelog output file
changelog_incremental = false     # Regenerate entire changelog (not incremental)

[tool.commitizen.customize]
changelog_pattern = "^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(\\(.*\\))?:!?"
